--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="bio.html">Bio</a></li>
                 <li><a
-                        href="mailto:your-email@example.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a>
+                    href="mailto:javiersecaduras@gmail.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a>
                 </li>
             </ul>
         </nav>
