--- a/gallery.html
+++ b/gallery.html
@@ -14,14 +14,14 @@
     <header>
         <nav class="top-menu">
             <div class="logo">JavierSMaza</div>
-            <button class="menu-toggle">&#9776;</button>
-            <ul class="nav-links">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="animatics.html">Animatics</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="bio.html">Bio</a></li>
-                <li><a href="mailto:javiersecaduras@gmail.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">
-                    Contact</a></li>
+                <li><a
+                    href="mailto:javiersecaduras@gmail.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
